--- a/graphics/linux-rl9-cairo-gobject/Makefile
+++ b/graphics/linux-rl9-cairo-gobject/Makefile
@@ -9,6 +9,8 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Vector graphics library Cairo (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://www.cairographics.org/
 
+LICENSE=	lgpl2.1
+
 USES=		cpe linux:rl9
 USE_LINUX=	cairo dri fontconfig freetype imageformats-libs pixman xorglibs
 USE_LINUX_RPM=	yes
