--- a/graphics/linux-c7-graphite2/Makefile
+++ b/graphics/linux-c7-graphite2/Makefile
@@ -1,5 +1,3 @@
-# Created by: Piotr Kubaj <pkubaj@anongoth.pl>
-
 PORTNAME=	graphite2
 PORTVERSION=	1.3.10
 DISTVERSIONSUFFIX=	-1.el7_3
@@ -7,10 +5,12 @@ CATEGORIES=	graphics linux
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Rendering capabilities for complex non-Roman writing systems (Linux CentOS ${LINUX_DIST_VER})
+WWW=		https://graphite.sil.org
 
 LICENSE=	lgpl2.1
 
-USES=		linux:c7
+USES=		cpe linux:c7
+CPE_VENDOR=	sil
 USE_LDCONFIG=	yes
 USE_LINUX_RPM=	yes
 
