--- a/graphics/linux-rl9-qt5-qtsvg/Makefile
+++ b/graphics/linux-rl9-qt5-qtsvg/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	qt5
 PORTVERSION=	5.15.9
 DISTVERSIONSUFFIX=	-2.el9
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	graphics linux
 PKGNAMESUFFIX=	-qtsvg
 
@@ -9,11 +9,11 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Cross-platform application and UI framework, ${PKGNAMESUFFIX:S/-qt//g} (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://www.qt.io/
 
-LICENSE=	gpl2+
+LICENSE=	GPLv2+
 
 USES=		linux:rl9
 USE_LDCONFIG=	yes
-USE_LINUX=	cups-libs dbuslibs dri jpeg libxml2 png qtbase qtimageformats tiff xorglibs webp
+USE_LINUX=	cups-libs dbuslibs dri imageformats-libs libxml2 qtbase qtimageformats xorglibs
 USE_LINUX_RPM=	yes
 WANT_LINUX32=	yes
 
