--- a/graphics/linux-rl9-libjxl/Makefile
+++ b/graphics/linux-rl9-libjxl/Makefile
@@ -1,8 +1,8 @@
 PORTNAME=	libjxl
 PORTVERSION=	0.7.0
 DISTVERSIONSUFFIX=	-1.el9
+PORTREVISION=	1
 MASTER_SITES=	EPEL9
-#PKGNAMESUFFIX=	-libs
 CATEGORIES=	graphics linux
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -13,7 +13,7 @@ LICENSE=	bsd2
 
 USES=		linux:rl9
 USE_LDCONFIG=	yes
-USE_LINUX=	jpeg png tiff
+USE_LINUX=	brotli
 USE_LINUX_RPM=	yes
 
 LIB_DISTNAMES=	${PORTNAME}-${DISTVERSIONFULL}
