japanese/font-marumoji: fix fake

--- a/japanese/font-marumoji/Makefile
+++ b/japanese/font-marumoji/Makefile
@@ -11,13 +11,15 @@ COMMENT=	Japanese marumoji fonts
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
+FAKE_OPTS=	trueprefix
+
 BUILD_DEPENDS=	mkbold:x11-fonts/mkbold-mkitalic \
 		bdftopcf:x11-fonts/bdftopcf
 
 USES=		fonts:fc
 FONTPATHSPEC=	${FONTNAME}:unscaled:pri=60
 NO_ARCH=	yes
-MAKE_ENV=	FONTSDIR=${FONTSDIR:S,${PREFIX},,}
+MAKE_ENV=	FONTSDIR=${FONTSDIR:S,${TRUE_PREFIX},,}
 SUB_FILES=	Makefile pkg-install
 PKGINSTALL=	${WRKDIR}/pkg-install
 PKGDEINSTALL=	${WRKDIR}/pkg-install
@@ -27,5 +29,8 @@ ${WRKSRC}/maru16.bdf:
 
 pre-build: ${WRKSRC}/maru16.bdf
 	${INSTALL_DATA} ${WRKDIR}/Makefile ${WRKSRC}
+
+pre-fake:
+	${MKDIR} ${FAKE_DESTDIR}${TRUE_PREFIX}/share/fonts/marumoji
 
 .include <bsd.port.mk>
