dns/linux-c7-libasyncns: roll

--- a/dns/linux-c7-libasyncns/Makefile
+++ b/dns/linux-c7-libasyncns/Makefile
@@ -6,14 +6,15 @@ CATEGORIES=	dns devel linux
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Library for executing DNS queries (Linux CentOS ${LINUX_DIST_VER})
+WWW=		https://0pointer.de/lennart/projects/libasyncns/
 
-LICENSE=	lgpl2.1
+LICENSE=	lgpl2.1+
 
 USES=		linux:c7
 USE_LDCONFIG=	yes
 USE_LINUX_RPM=	yes
 
-CONFLICTS=	linux-c6-${PORTNAME}-[0-9]*
+CONFLICTS=	linux-c6-${PORTNAME}
 
 OPTIONS_DEFINE=	DOCS
 
