--- a/security/linux-rl9-ca-certificates/Makefile
+++ b/security/linux-rl9-ca-certificates/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	ca-certificates
 PORTVERSION=	2024.2.69
 DISTVERSIONSUFFIX=	_v8.0.303-91.4.el9_4
+PORTREVISION=	3
 CATEGORIES=	security linux
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -13,5 +14,15 @@ USE_LINUX=	p11-kit
 USE_LINUX_RPM=	noarch
 
 OPTIONS_DEFINE=	DOCS
+
+post-fake:
+	cd ${FAKE_DESTDIR} && ${LINUXBASE}/bin/sh \
+		./${PREFIX}/usr/bin/update-ca-trust extract \
+		-o ./${PREFIX}/etc/pki/ca-trust/extracted
+	${FIND} ${FAKE_DESTDIR}${PREFIX} -type l -exec \
+		${SH} -c "tgt=\$$(readlink {}) ; [ \$$tgt != \$${tgt#/} ] && ${RLN} ${FAKE_DESTDIR}${PREFIX}\$$tgt {}" \; || ${TRUE}
+	cd ${FAKE_DESTDIR}${PREFIX} && \
+		${FIND} etc/pki/ca-trust/extracted/pem/directory-hash -type f -or -type l >> ${TMPPLIST}
+
 
 .include <bsd.port.mk>
