--- a/x11/xconsole/Makefile
+++ b/x11/xconsole/Makefile
@@ -1,14 +1,14 @@
 PORTNAME=	xconsole
 PORTVERSION=	1.0.8
+PORTREVISION=	1
 CATEGORIES=	x11
-DISTFILES=	xconsole-${PORTVERSION}.tar.xz
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Monitor system console messages with X
 
 LICENSE=	mit
 
-USES=		xorg xorg-cat:app tar:xz
-USE_XORG=	xt xaw
+USES=		tar:xz xorg xorg-cat:app
+USE_XORG=	x11 xt xmu xaw
 
 .include <bsd.port.mk>
