add japanese placeholders for man directories.  add gobject and glib bootstrap

--- a/Templates/BSD.local.dist
+++ b/Templates/BSD.local.dist
@@ -21,6 +21,10 @@
         rc.conf.d
         ..
     ..
+    glib-bootstrap
+    ..
+    gobject-introspection-bootstrap
+    ..
     include
         X11
         ..
@@ -655,6 +659,26 @@
             ..
         ..
         man
+            ja
+                man1
+                ..
+                man2
+                ..
+                man3
+                ..
+                man4
+                ..
+                man5
+                ..
+                man6
+                ..
+                man7
+                ..
+                man8
+                ..
+                man9
+                ..
+            ..
             man1
             ..
             man2
