--- a/devel/Makefile
+++ b/devel/Makefile
@@ -585,7 +585,12 @@ SUBDIR += p5-Date-Calc
 SUBDIR += p5-Date-Manip
 SUBDIR += p5-Date-Simple
 SUBDIR += p5-DateTime
+SUBDIR += p5-DateTime-Astro
+SUBDIR += p5-DateTime-Calendar-Chinese
+SUBDIR += p5-DateTime-Calendar-Japanese
 SUBDIR += p5-DateTime-Calendar-Mayan
+SUBDIR += p5-DateTime-Event-Chinese
+SUBDIR += p5-DateTime-Event-Sunrise
 SUBDIR += p5-DateTime-Format-Builder
 SUBDIR += p5-DateTime-Format-ISO8601
 SUBDIR += p5-DateTime-Format-Mail
@@ -596,7 +601,9 @@ SUBDIR += p5-DateTime-Format-SQLite
 SUBDIR += p5-DateTime-Format-W3CDTF
 SUBDIR += p5-DateTime-HiRes
 SUBDIR += p5-DateTime-Locale
+SUBDIR += p5-DateTime-Set
 SUBDIR += p5-DateTime-TimeZone
+SUBDIR += p5-DateTime-Util-Calc
 SUBDIR += p5-Declare-Constraints-Simple
 SUBDIR += p5-Devel-ArgNames
 SUBDIR += p5-Devel-CallChecker
@@ -800,6 +807,7 @@ SUBDIR += p5-SDL
 SUBDIR += p5-SUPER
 SUBDIR += p5-Safe-Isa
 SUBDIR += p5-Scope-Guard
+SUBDIR += p5-Set-Infinite
 SUBDIR += p5-Set-Object
 SUBDIR += p5-Set-Scalar
 SUBDIR += p5-Specio
