lang/Makefile: connect

--- a/lang/Makefile
+++ b/lang/Makefile
@@ -107,6 +107,7 @@ SUBDIR += python2
 SUBDIR += python3
 SUBDIR += python310
 SUBDIR += python311
+SUBDIR += python312
 SUBDIR += python39
 SUBDIR += python27
 SUBDIR += referenceassemblies-pcl
