--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1306,6 +1306,7 @@ SUBDIR += py-pathlib2
 SUBDIR += py-pathspec
 SUBDIR += py-pbr
 SUBDIR += py-pdm-backend
+SUBDIR += py-pefile
 SUBDIR += py-pendulum
 SUBDIR += py-pep8-naming
 SUBDIR += py-phx-class-registry
