--- a/security/py-ecdsa/Makefile
+++ b/security/py-ecdsa/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	ecdsa
-PORTVERSION=	0.18.0
-PORTREVISION=	1
+PORTVERSION=	0.19.1
 CATEGORIES=	security python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -12,15 +11,18 @@ WWW=		https://github.com/tlsfuzzer/python-ecdsa
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}six>=1.9.0:devel/py-six@${PY_FLAVOR}
 
 USES=		python
-USE_PYTHON=	autoplist concurrent distutils
+USE_PYTHON=	autoplist concurrent pep517
 
-OPTIONS_RADIO=		FASTER
+NO_ARCH=	yes
+
+OPTIONS_RADIO=	FASTER
 OPTIONS_RADIO_FASTER=	GMPY GMPY2
-OPTIONS_DEFAULT=	GMPY2
-
+OPTIONS_DEFAULT=GMPY2
 GMPY_DESC=	GMPY support
 GMPY2_DESC=	GMPY2 support
 
