--- a/databases/Makefile
+++ b/databases/Makefile
@@ -49,6 +49,7 @@ SUBDIR += mdbtools
 SUBDIR += memcached
 SUBDIR += mongodb50
 SUBDIR += mongodb60
+SUBDIR += mongodb70
 SUBDIR += mysql-connector-c++
 SUBDIR += mysql-connector-j
 SUBDIR += mysql-connector-java51
