--- a/databases/Makefile
+++ b/databases/Makefile
@@ -198,8 +198,14 @@ SUBDIR += redis74
 SUBDIR += rrdtool
 SUBDIR += ruby-bdb
 SUBDIR += ruby-xapian
+SUBDIR += rubygem-activemodel4
+SUBDIR += rubygem-activerecord4
+SUBDIR += rubygem-activerecord-import
+SUBDIR += rubygem-arel6
 SUBDIR += rubygem-mysql
 SUBDIR += rubygem-pg
+SUBDIR += rubygem-pg_array_parser
+SUBDIR += rubygem-postgres_ext
 SUBDIR += rubygem-redis
 SUBDIR += rubygem-redis-client
 SUBDIR += rubygem-ruby-mysql
