--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1592,6 +1592,7 @@ SUBDIR += riscv64-none-elf-gcc
 SUBDIR += rlog
 SUBDIR += rttr
 SUBDIR += ruby-gems
+SUBDIR += rubygem-activesupport4
 SUBDIR += rubygem-ast
 SUBDIR += rubygem-builder
 SUBDIR += rubygem-cairo-gobject
