--- a/databases/Makefile
+++ b/databases/Makefile
@@ -199,10 +199,15 @@ SUBDIR += rrdtool
 SUBDIR += ruby-bdb
 SUBDIR += ruby-xapian
 SUBDIR += rubygem-activemodel4
+SUBDIR += rubygem-activemodel5
 SUBDIR += rubygem-activerecord4
+SUBDIR += rubygem-activerecord5
 SUBDIR += rubygem-activerecord-import
 SUBDIR += rubygem-arel6
+SUBDIR += rubygem-arel8
+SUBDIR += rubygem-memcache
 SUBDIR += rubygem-mysql
+SUBDIR += rubygem-mysql2
 SUBDIR += rubygem-pg
 SUBDIR += rubygem-pg_array_parser
 SUBDIR += rubygem-postgres_ext
