--- a/misc/Makefile
+++ b/misc/Makefile
@@ -83,6 +83,8 @@ SUBDIR += qt5-l10n
 SUBDIR += qt6-doc
 SUBDIR += qt6-examples
 SUBDIR += qt6ct
+SUBDIR += rubygem-mime-types
+SUBDIR += rubygem-mime-types-data
 SUBDIR += seabios
 SUBDIR += shared-mime-info
 SUBDIR += shc
