--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,20 +1,34 @@
 COMMENT = Development utilities
 
 SUBDIR += 9base
+SUBDIR += R-cran-R6
+SUBDIR += R-cran-S7
+SUBDIR += R-cran-bit
+SUBDIR += R-cran-bit64
 SUBDIR += R-cran-bitops
+SUBDIR += R-cran-brio
 SUBDIR += R-cran-callr
 SUBDIR += R-cran-cli
 SUBDIR += R-cran-covr
+SUBDIR += R-cran-fansi
+SUBDIR += R-cran-glue
+SUBDIR += R-cran-lifecycle
+SUBDIR += R-cran-magrittr
 SUBDIR += R-cran-memoise
 SUBDIR += R-cran-mockery
+SUBDIR += R-cran-pillar
+SUBDIR += R-cran-pkgconfig
+SUBDIR += R-cran-rematch2
 SUBDIR += R-cran-rlang
 SUBDIR += R-cran-rprojroot
 SUBDIR += R-cran-rstudioapi
 SUBDIR += R-cran-sys
 SUBDIR += R-cran-testit
 SUBDIR += R-cran-testthat
+SUBDIR += R-cran-tibble
 SUBDIR += R-cran-urlchecker
 SUBDIR += R-cran-uuid
+SUBDIR += R-cran-vctrs
 SUBDIR += R-cran-waldo
 SUBDIR += R-cran-whoami
 SUBDIR += R-cran-withr
