--- a/devel/Makefile
+++ b/devel/Makefile
@@ -10,6 +10,8 @@ SUBDIR += R-cran-brio
 SUBDIR += R-cran-callr
 SUBDIR += R-cran-cli
 SUBDIR += R-cran-covr
+SUBDIR += R-cran-desc
+SUBDIR += R-cran-diffobj
 SUBDIR += R-cran-fansi
 SUBDIR += R-cran-glue
 SUBDIR += R-cran-lifecycle
