--- a/devel/Makefile
+++ b/devel/Makefile
@@ -10,8 +10,10 @@ SUBDIR += R-cran-brio
 SUBDIR += R-cran-callr
 SUBDIR += R-cran-cli
 SUBDIR += R-cran-covr
+SUBDIR += R-cran-crayon
 SUBDIR += R-cran-desc
 SUBDIR += R-cran-diffobj
+SUBDIR += R-cran-evaluate
 SUBDIR += R-cran-fansi
 SUBDIR += R-cran-glue
 SUBDIR += R-cran-lifecycle
@@ -20,6 +22,7 @@ SUBDIR += R-cran-memoise
 SUBDIR += R-cran-mockery
 SUBDIR += R-cran-pillar
 SUBDIR += R-cran-pkgconfig
+SUBDIR += R-cran-pkgload
 SUBDIR += R-cran-rematch2
 SUBDIR += R-cran-rlang
 SUBDIR += R-cran-rprojroot
