--- a/databases/Makefile
+++ b/databases/Makefile
@@ -206,6 +206,7 @@ SUBDIR += rubygem-activerecord-import
 SUBDIR += rubygem-arel6
 SUBDIR += rubygem-arel8
 SUBDIR += rubygem-couchrest
+SUBDIR += rubygem-gdbm
 SUBDIR += rubygem-hiredis
 SUBDIR += rubygem-jdbc-mysql
 SUBDIR += rubygem-memcache
@@ -215,8 +216,12 @@ SUBDIR += rubygem-mysql2
 SUBDIR += rubygem-pg
 SUBDIR += rubygem-pg_array_parser
 SUBDIR += rubygem-postgres_ext
+SUBDIR += rubygem-rbase
 SUBDIR += rubygem-redis
 SUBDIR += rubygem-redis-client
+SUBDIR += rubygem-redis-clustering
+SUBDIR += rubygem-redis-cluster-client
+SUBDIR += rubygem-redis-namespace
 SUBDIR += rubygem-ruby-mysql
 SUBDIR += rubygem-sdbm
 SUBDIR += rubygem-sqlite3
