misc/grc: add default source files

--- a/misc/grc/files/patch-grc.conf
+++ b/misc/grc/files/patch-grc.conf
@@ -1,6 +1,6 @@
---- grc.conf.orig	2021-08-07 15:44:43 UTC
-+++ grc.conf
-@@ -299,3 +299,43 @@ conf.irclog
+--- grc.conf.orig	2021-08-07 11:44:43.000000000 -0400
++++ grc.conf	2025-07-13 00:16:25.375883000 -0400
+@@ -299,3 +299,47 @@
  conf.log
  
  
@@ -44,3 +44,7 @@
 +# # drill
 +(^|[/\w\.]+/)drill\s?
 +conf.drill
++
++# # mport
++(^|[/\w\.]+/)drill\s?
++conf.mport
