--- a/filesystems/Makefile
+++ b/filesystems/Makefile
@@ -1,5 +1,6 @@
     COMMENT = File systems and related utilities
 
+    SUBDIR += R-cran-fs
     SUBDIR += acfgfs
     SUBDIR += afuse
     SUBDIR += archivemount
