--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -4,6 +4,11 @@ SUBDIR += GraphicsMagick
 SUBDIR += Hermes
 SUBDIR += ImageMagick6
 SUBDIR += ImageMagick7
+SUBDIR += R-cran-jpeg
+SUBDIR += R-cran-magick
+SUBDIR += R-cran-png
+SUBDIR += R-cran-ragg
+SUBDIR += R-cran-webp
 SUBDIR += aalib
 SUBDIR += agg
 SUBDIR += argyllcms
