--- a/devel/Makefile
+++ b/devel/Makefile
@@ -15,8 +15,12 @@ SUBDIR += R-cran-desc
 SUBDIR += R-cran-diffobj
 SUBDIR += R-cran-evaluate
 SUBDIR += R-cran-fansi
+SUBDIR += R-cran-future
+SUBDIR += R-cran-globals
 SUBDIR += R-cran-glue
+SUBDIR += R-cran-later
 SUBDIR += R-cran-lifecycle
+SUBDIR += R-cran-lubridate
 SUBDIR += R-cran-magrittr
 SUBDIR += R-cran-memoise
 SUBDIR += R-cran-mockery
@@ -24,6 +28,9 @@ SUBDIR += R-cran-pillar
 SUBDIR += R-cran-pkgconfig
 SUBDIR += R-cran-pkgload
 SUBDIR += R-cran-praise
+SUBDIR += R-cran-promises
+SUBDIR += R-cran-proto
+SUBDIR += R-cran-purrr
 SUBDIR += R-cran-rematch2
 SUBDIR += R-cran-rlang
 SUBDIR += R-cran-rprojroot
@@ -32,6 +39,7 @@ SUBDIR += R-cran-sys
 SUBDIR += R-cran-testit
 SUBDIR += R-cran-testthat
 SUBDIR += R-cran-tibble
+SUBDIR += R-cran-tinytest
 SUBDIR += R-cran-urlchecker
 SUBDIR += R-cran-uuid
 SUBDIR += R-cran-vctrs
