--- a/print/Makefile
+++ b/print/Makefile
@@ -45,6 +45,7 @@ SUBDIR += linux-rl9-cups-libs
 SUBDIR += linux-rl9-freetype
 SUBDIR += linux-rl9-harfbuzz
 SUBDIR += mp-letter
+SUBDIR += p5-Text-PDF
 SUBDIR += pdflib
 SUBDIR += psutils
 SUBDIR += py-collidoscope
