--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -12,7 +12,7 @@ SUBDIR += R-cran-htmltools
 SUBDIR += R-cran-hunspell
 SUBDIR += R-cran-litedown
 SUBDIR += R-cran-markdown
-SUBDIR += R-cran-readr
+SUBDIR += R-cran-readrA
 SUBDIR += R-cran-rex
 SUBDIR += R-cran-rio
 SUBDIR += R-cran-rmarkdown
@@ -22,6 +22,7 @@ SUBDIR += R-cran-stringi
 SUBDIR += R-cran-stringr
 SUBDIR += R-cran-utf8
 SUBDIR += R-cran-xml2
+SUBDIR += R-cran-xtable
 SUBDIR += R-cran-yaml
 SUBDIR += UCD
 SUBDIR += agrep
@@ -157,6 +158,7 @@ SUBDIR += opensearch210
 SUBDIR += opensearch213
 SUBDIR += opensearch216
 SUBDIR += opensp
+SUBDIR += p5-CAM-PDF
 SUBDIR += p5-HTML-Format
 SUBDIR += p5-HTML-Tidy
 SUBDIR += p5-Hash-Merge
@@ -231,6 +233,7 @@ SUBDIR += p5-XML-TreePP
 SUBDIR += p5-XML-Twig
 SUBDIR += p5-XML-Writer
 SUBDIR += p5-XML-XPath
+SUBDIR += p5-XML-XPathEngine
 SUBDIR += p5-XString
 SUBDIR += p5-YAML
 SUBDIR += p5-YAML-LibYAML
