--- a/www/Makefile
+++ b/www/Makefile
@@ -124,6 +124,7 @@ SUBDIR += p5-Cookie-Baker
 SUBDIR += p5-FCGI
 SUBDIR += p5-FCGI-ProcManager
 SUBDIR += p5-HTML-Breadcrumbs
+SUBDIR += p5-HTML-Element-Extended
 SUBDIR += p5-HTML-Encoding
 SUBDIR += p5-HTML-Form
 SUBDIR += p5-HTML-Lint
@@ -131,15 +132,19 @@ SUBDIR += p5-HTML-Mason
 SUBDIR += p5-HTML-Pager
 SUBDIR += p5-HTML-Parser
 SUBDIR += p5-HTML-Scrubber
+SUBDIR += p5-HTML-Selector-XPath
 SUBDIR += p5-HTML-SimpleLinkExtor 
 SUBDIR += p5-HTML-Strip
 SUBDIR += p5-HTML-StripScripts
 SUBDIR += p5-HTML-StripScripts-Parser
 SUBDIR += p5-HTML-Table
+SUBDIR += p5-HTML-TableExtract
 SUBDIR += p5-HTML-Tagset
 SUBDIR += p5-HTML-Template
 SUBDIR += p5-HTML-Template-HashWrapper
 SUBDIR += p5-HTML-Tree
+SUBDIR += p5-HTML-TreeBuilder-LibXML
+SUBDIR += p5-HTML-TreeBuilder-XPath
 SUBDIR += p5-HTTP-Body
 SUBDIR += p5-HTTP-CookieJar
 SUBDIR += p5-HTTP-Cookies
@@ -187,6 +192,8 @@ SUBDIR += p5-WWW-Curl
 SUBDIR += p5-WWW-Form-UrlEncoded
 SUBDIR += p5-WWW-Mechanize
 SUBDIR += p5-WWW-RobotRules
+SUBDIR += p5-Web-Query
+SUBDIR += p5-Web-Scraper
 SUBDIR += p5-libapreq2
 SUBDIR += p5-libwww
 SUBDIR += palemoon
