--- a/converters/Makefile
+++ b/converters/Makefile
@@ -1,5 +1,6 @@
 COMMENT = Character code converters
 
+SUBDIR += R-cran-arabic2kansuji
 SUBDIR += R-cran-jsonlite
 SUBDIR += bsdconv
 SUBDIR += dos2unix
