add date and maps

--- a/math/Makefile
+++ b/math/Makefile
@@ -3,8 +3,10 @@ COMMENT = Mathematics
 SUBDIR += Imath
 SUBDIR += R
 SUBDIR += R-cran-assertthat
+SUBDIR += R-cran-date
 SUBDIR += R-cran-dplyr
 SUBDIR += R-cran-haven
+SUBDIR += R-cran-maps
 SUBDIR += R-cran-mathjaxr
 SUBDIR += R-cran-sets
 SUBDIR += adol-c
