--- a/lang/ghc/Makefile
+++ b/lang/ghc/Makefile
@@ -2,11 +2,8 @@ PORTNAME=	ghc
 PORTVERSION=	${GHC_VERSION}
 CATEGORIES=	lang haskell
 MASTER_SITES=	https://www.haskell.org/ghc/dist/${PORTVERSION}/:source \
-		FREEBSD_LOCAL/arrowd/:boot \
-		https://hackage.haskell.org/package/hscolour-${HSCOLOUR_VERSION}/:docs
-DISTFILES=	ghc-${PORTVERSION}-src${EXTRACT_SUFX}:source \
-		hscolour-${HSCOLOUR_VERSION}.tar.gz:docs
-EXTRACT_ONLY=	${_DISTFILES:C/hscolour.*$//g}
+		FREEBSD_LOCAL/arrowd/:boot
+DISTFILES=	ghc-${PORTVERSION}-src${EXTRACT_SUFX}:source
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Compiler for the functional language Haskell
@@ -20,28 +17,27 @@ USE_LOCALE=		en_US.UTF-8
 USE_PERL5=		build
 GNU_CONFIGURE=		yes
 CONFIGURE_ARGS=		--with-iconv-includes=${LOCALBASE}/include \
-			--with-iconv-libraries=${LOCALBASE}/lib
-CONFIGURE_ENV=		CC=${CC} LD=${LD} PATH=${SLAVES_PREFIX}/bin:${PATH}
+			--with-iconv-libraries=${LOCALBASE}/lib \
+			--docdir=${DOCSDIR}
+CONFIGURE_ENV=		CC=${CC} LD=${LD} PATH=${SLAVES_PREFIX}/bin:${PATH}:/usr/local/bin
 CONFIGURE_TARGET=	${ARCH}-portbld-freebsd12.4
-MAKE_ENV=		PATH=${SLAVES_PREFIX}/bin:${PATH}
+MAKE_ENV=		PATH=${SLAVES_PREFIX}/bin:${PATH}:/usr/local/bin
 
 SUB_FILES=		build.mk
-SUB_LIST=		GHC_VERSION=${GHC_VERSION} \
-			NCURSESINC="${NCURSESBASE}/include" NCURSESLIB="${NCURSESLIB}" \
+SUB_LIST=		NCURSESINC="${NCURSESBASE}/include" NCURSESLIB="${NCURSESLIB}" \
 			CFLAGS="${CFLAGS}"
+
+OPTIONS_DEFINE=		DYNAMIC GMP PROFILE DOCS
+OPTIONS_DEFAULT=	DYNAMIC PROFILE GMP
 
 OPTIONS_GROUP=		BOOTSTRAP
 BOOTSTRAP_DESC=		Bootsrap using installed ghc
 OPTIONS_GROUP_BOOTSTRAP=BOOT
-OPTIONS_DEFINE=		DYNAMIC GMP PROFILE DOCS
-OPTIONS_SUB=		yes
-
-OPTIONS_DEFAULT=	DYNAMIC PROFILE GMP
 
 BOOT_DESC=		Use installed GHC for bootstrapping
 DOCS_DESC=		Install HTML documentation
 DYNAMIC_DESC=		Add support for dynamic linking
-GMP_DESC=		Use GNU Multi-precision Library for big integers support
+GMP_DESC=		Use GNU Multi-precision Library from Ports
 PROFILE_DESC=		Add support for performance profiling
 
 DOCS_BUILD_DEPENDS=	sphinx-build:textproc/py-sphinx
@@ -58,10 +54,6 @@ DYNAMIC_PLIST_SUB_OFF=	NODYNAMIC=""
 GMP_CONFIGURE_WITH=	gmp-includes=${LOCALBASE}/include \
 			gmp-libraries=${LOCALBASE}/lib
 GMP_LIB_DEPENDS=	libgmp.so:math/gmp
-GMP_SUB_LIST=		INTEGER_LIBRARY="integer-gmp"
-GMP_SUB_LIST_OFF=	INTEGER_LIBRARY="integer-simple"
-GMP_PLIST_SUB=		GMP="" SIMPLE="@comment "
-GMP_PLIST_SUB_OFF=	GMP="@comment " SIMPLE=""
 
 # Append substitutions for build.mk
 BOOT_SUB_LIST=		HSC2HS=${LOCALBASE}/bin/hsc2hs
@@ -70,33 +62,40 @@ BOOT_SUB_LIST_OFF=	HSC2HS=${BOOT_HSC2HS}
 PROFILE_SUB_LIST=	WITH_PROFILE="YES"
 PROFILE_SUB_LIST_OFF=	WITH_PROFILE="NO"
 
-GHC_VERSION=		8.10.7
-CABAL_VERSION=		3.2.1.0
-HSCOLOUR_VERSION=	1.24.4
-LLVM_VERSION=		10
+GHC_VERSION=		9.2.2
+LLVM_VERSION=		12
+BOOT_GHC_VERSION=	8.10.7
 # LLVM version that bootstrap compiler uses
-BOOT_LLVM_VERSION=	90
+BOOT_LLVM_VERSION=	10
 
-PLIST_SUB=		GHC_VERSION=${GHC_VERSION} CABAL_VERSION=${CABAL_VERSION}
+OPTIONS_SUB=		yes
+
+BASE_PACKAGES=		Cabal:3.6.3.0 array:0.5.4.0 base:4.16.1.0 binary:0.8.9.0 \
+			bytestring:0.11.3.0 containers:0.6.5.1 deepseq:1.4.6.1 \
+			directory:1.3.6.2 exceptions:0.10.4 filepath:1.4.2.2 \
+			ghc:${GHC_VERSION} ghc-bignum:1.2 ghc-boot:${GHC_VERSION} \
+			ghc-boot-th:${GHC_VERSION} ghc-compact:0.1.0.0 \
+			ghc-heap:${GHC_VERSION} ghc-prim:0.8.0 \
+			ghci:${GHC_VERSION} haskeline:0.8.2 hpc:0.6.1.0 \
+			integer-gmp:1.1 libiserv:${GHC_VERSION} mtl:2.2.2 \
+			parsec:3.1.15.0 pretty:1.3.3.6 process:1.6.13.2 \
+			stm:2.5.0.2 template-haskell:2.18.0.0 terminfo:0.4.1.5 \
+			text:1.2.5.0 time:1.11.1.1 transformers:0.5.6.2 \
+			unix:2.7.2.2 xhtml:3000.2.2.1
+
+.for pkg in ${BASE_PACKAGES}
+PLIST_SUB+=	${pkg:C/\:.*//:tu}_VERSION=${pkg:C/^[^\:]*(\:|\$)//}
+.endfor
 
 PORTDOCS=		*
 
 .include <bsd.port.pre.mk>
 
 # This version of ncurses is needed by bootstrap compiler
-.if ${OSVERSION} > 1300078 && empty(PORT_OPTIONS:MBOOT) && ${ARCH} != powerpc64
+.if ${OSVERSION} > 1300078 && empty(PORT_OPTIONS:MBOOT)
 BUILD_DEPENDS+=	${LOCALBASE}/lib/compat/libncursesw.so.8:misc/compat12x
 .endif
 
-CONFIGURE_ARGS+=	--enable-dtrace=0
-
-BOOT_GHC_VERSION=      8.10.7
-
-NO_CCACHE=	ccache: error: Failed to create directory /nonexistent/.ccache/tmp: Permission denied
-
-DOCSDIR=		${PREFIX}/share/doc/${DISTNAME}
-DATADIR=		${PREFIX}/share/ghc-${GHC_VERSION}
-EXAMPLESDIR=		${PREFIX}/share/examples/ghc-${GHC_VERSION}
 GHC_ARCH=		${ARCH:S/amd64/x86_64/:C/armv.*/arm/}
 GHC_LIBDIR=		${STAGEDIR}${PREFIX}/lib/ghc-${GHC_VERSION}
 GHC_LIBDIR_REL=		lib/ghc-${GHC_VERSION}
@@ -119,70 +118,43 @@ _EXECUTABLES+=	${GHC_LIBDIR}/bin/ghc-iserv-dyn
 .endif
 
 .if empty(PORT_OPTIONS:MBOOT)
-BOOTSTRAPS_SUFFIX?=		${BOOTSTRAPS_SUFFIX_${ARCH}}
-BOOTSTRAPS_SUFFIX_powerpc64?=	-${PPC_ABI:tl}
-.  if ${OSVERSION} < 300000 && (${ARCH} == amd64 || ${ARCH} == i386)
-ELEVEN_SUFX=		11
-.  endif
-DISTFILES+=		ghc-${BOOT_GHC_VERSION}-boot-${ARCH}-freebsd${BOOTSTRAPS_SUFFIX}${EXTRACT_SUFX}:boot
+DISTFILES+=		ghc-${BOOT_GHC_VERSION}-boot-${ARCH}-freebsd${EXTRACT_SUFX}:boot
 .endif # MBOOT
 
 .if ${ARCH} == aarch64 || ${ARCH:Marmv*}
 # ghc-8.10.x on arm requires devel/llvm10
 # CONFIGURE_TARGET must to be the same as the llvm triple
 CONFIGURE_TARGET=	${ARCH}-unknown-freebsd${"${ARCH:Maarch64}" != "":?:-gnueabihf}
-EXTRA_PATCHES+=		${PATCHDIR}/extra-patch-aclocal.m4
+CONFIGURE_ARGS+=	--host=${CONFIGURE_TARGET}
 BUILD_DEPENDS+=		llc${LLVM_VERSION}:devel/llvm${LLVM_VERSION}
 RUN_DEPENDS+=		llc${LLVM_VERSION}:devel/llvm${LLVM_VERSION}
-CONFIGURE_ENV+=		LLC=llc${LLVM_VERSION} \
-			OPT=opt${LLVM_VERSION} \
-			CLANG=clang${LLVM_VERSION} \
-			CC=clang${LLVM_VERSION}
 
 # When GHC being compiled and GHC used for bootstrapping support different
 # LLVM versions, we have to pull in both. Luckily, this is relatively rare.
 .  if ${BOOT_LLVM_VERSION} != ${LLVM_VERSION}
 BUILD_DEPENDS+=		llc${BOOT_LLVM_VERSION}:devel/llvm${BOOT_LLVM_VERSION}
-CONFIGURE_ENV_BOOTSTRAP=LLC=llc${BOOT_LLVM_VERSION} \
-			OPT=opt${BOOT_LLVM_VERSION} \
-			CLANG=clang${BOOT_LLVM_VERSION} \
-			CC=clang${BOOT_LLVM_VERSION}
-.  endif
-.endif
-
-.if ${ARCH} == aarch64 || ${ARCH:Marmv*} || ${ARCH} == powerpc64
-.  if ${OSVERSION} < 300000
-IGNORE=	lang/ghc requires at least 3.2
-.  endif
-.  ifdef QEMU_EMULATING
-IGNORE=	qemu-user-static isn't able to build lang/ghc, but it builds fine on a real hardware
 .  endif
 .endif
 
 .if empty(PORT_OPTIONS:MBOOT)
 BOOT_DIR=	${WRKDIR}/ghc-${BOOT_GHC_VERSION}-boot
 BOOT_GHC=	${BOOT_DIR}/bin/ghc-${BOOT_GHC_VERSION}
-BOOT_GHC-PKG=	${BOOT_DIR}/bin/ghc-pkg-${BOOT_GHC_VERSION}
-BOOT_HSC2HS=	${BOOT_DIR}/bin/hsc2hs
 
-SLAVE_ENV=	${SETENV} PATH=${BOOT_DIR}/bin:${PATH}
-
-CONFIGURE_ARGS+=	GHC=${BOOT_GHC}
+CONFIGURE_ENV+=		GHC=${BOOT_GHC}
 .else # MBOOT
-SLAVE_ENV=		# empty
-CONFIGURE_ARGS+=	GHC=${LOCALBASE}/bin/ghc
+CONFIGURE_ENV+=		GHC=${LOCALBASE}/bin/ghc
 .endif # MBOOT
 
-SLAVES_PREFIX=		${WRKDIR}/slaves_prefix
-SLAVES_WRKDIRPREFIX=	${WRKDIR}/slaves_wrkdirprefix
-
+# TODO: remove this after rerolling all bootstraps
 post-patch:
 	${TOUCH} ${WRKSRC}/libraries/terminfo/config.guess
 	${TOUCH} ${WRKSRC}/libraries/process/config.guess
 	${TOUCH} ${WRKSRC}/libraries/base/config.guess
 	${TOUCH} ${WRKSRC}/libraries/integer-gmp/config.guess
+	${TOUCH} ${WRKSRC}/libraries/integer-gmp/config.sub
 	${TOUCH} ${WRKSRC}/libraries/directory/config.guess
 	${TOUCH} ${WRKSRC}/libraries/time/config.guess
+	${TOUCH} ${WRKSRC}/libraries/ghc-bignum/config.guess
 
 .if empty(PORT_OPTIONS:MBOOT)
 	@${REINPLACE_CMD} -e '/^mandir/d' ${BOOT_DIR}/mk/build.mk
@@ -199,37 +171,26 @@ pre-configure: apply-slist
 .if empty(PORT_OPTIONS:MBOOT)
 	cd ${BOOT_DIR} && ${CONFIGURE_ENV} ${CONFIGURE_ENV_BOOTSTRAP} ${CONFIGURE_CMD} --prefix=${BOOT_DIR} --build=${ARCH}-portbld-freebsd12.4 --host=${ARCH}-portbld-freebsd12.4 --target=${ARCH}-portbld-freebsd12.4
 	cd ${BOOT_DIR} && PACKAGES='' ${MAKE_CMD} install
-.else
-# otherwise, make sure we have "ghc" in PATH
-	if ! ${WHICH} -s ghc ; then \
-		echo "No 'ghc' executable is found in your PATH! Turn off BOOT option." ; false ; \
-	fi
-.endif
-# If DOCS are set, install HsColour in-place
-.if ${PORT_OPTIONS:MDOCS}
-	${MKDIR} ${SLAVES_PREFIX}
-	${MKDIR} ${SLAVES_WRKDIRPREFIX}
-
-	cd ${SLAVES_WRKDIRPREFIX} && \
-		${TAR} xvf ${DISTDIR}/hscolour-${HSCOLOUR_VERSION}.tar.gz && \
-		cd hscolour-${HSCOLOUR_VERSION} && \
-		${SLAVE_ENV} ghc --make -o Setup Setup.hs -package Cabal && \
-		${SLAVE_ENV} ./Setup configure --ghc --prefix=${SLAVES_PREFIX} --with-gcc=${CC} --with-ld=${LD} && \
-		${SLAVE_ENV} ./Setup build && \
-		${SLAVE_ENV} ./Setup install
 .endif
 
 post-install:
 	(for f in ${_EXECUTABLES} $$(${FIND} ${GHC_LIBDIR} -name '*.so*'); do \
 		${STRIP_CMD} $$f; done)
-	-${RM} -r ${STAGEDIR}${DOCSDIR}/html/haddock/.build-html
-	-${RM} ${STAGEDIR}${PREFIX}/bin/haddock
+	${FIND} ${STAGEDIR}${DOCSDIR}/html -name .buildinfo -delete
+	${RM} ${STAGEDIR}${PREFIX}/bin/haddock
+
+.if exists(${BOOT_DIR}/bin/runhaskell)
+RUNHASKELL?=	${BOOT_DIR}/bin/runhaskell
+.else
+RUNHASKELL?=	${LOCALBASE}/bin/runhaskell
+.endif
 
 .PHONY: fixup-plist
 fixup-plist:
-	${BOOT_DIR}/bin/runhaskell ${PATCHDIR}/fixup-plist.hs ${.CURDIR}/pkg-plist
+	${RUNHASKELL} ${PATCHDIR}/fixup-plist.hs ${.CURDIR}/pkg-plist
 
 # Create a bootstrap compiler tar ball: run this in an interactive poudriere jail
+# Set all OPTIONS to OFF when generating bootstraps
 .PHONY: create-bootstrap
 create-bootstrap:
 	cd ${WRKSRC} \
@@ -245,14 +206,9 @@ create-bootstrap:
 		&& ${STAT} -f %z ghc-${GHC_VERSION}-boot-${ARCH}-freebsd.tar.xz
 
 # Much like create-bootstrap, just different naming and output format
+# Set DYNAMIC, GMP and PROFILE to ON, and DOCS to OFF when generating Stack bindist
 .PHONY: create-stack-bindist
 create-stack-bindist:
-	${REINPLACE_CMD} -e '/^mandir/d' \
-			-e '/^infodir/d' \
-			-e '/^docdir/d' \
-			-e '/^htmldir/d' \
-		${WRKSRC}/mk/build.mk
-
 	cd ${WRKSRC} \
 		&& ${GMAKE} binary-dist TAR_COMP=xz \
 		&& ${MV} ${WRKSRC}/ghc-${GHC_VERSION}-${GHC_ARCH}-portbld-freebsd.tar.xz /tmp/
