update py-build, py-project-hooks

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1371,7 +1371,7 @@ SUBDIR += py-pygdbmi
 SUBDIR += py-pyicu
 SUBDIR += py-pyinotify
 SUBDIR += py-pythran
-SUBDIR += py-pyproject_hooks
+SUBDIR += py-pyproject-hooks
 SUBDIR += py-pyproject-api
 SUBDIR += py-pyproject-metadata
 SUBDIR += py-pyrsistent
