--- a/devel/py-pyproject-hooks/Makefile
+++ b/devel/py-pyproject-hooks/Makefile
@@ -1,8 +1,9 @@
-PORTNAME=	pyproject_hooks
-PORTVERSION=	1.0.0
+PORTNAME=	pyproject-hooks
+PORTVERSION=	1.2.0
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
+DISTNAME=	pyproject_hooks-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Wrappers to call pyproject.toml-based build backend hooks
@@ -20,10 +21,4 @@ NO_ARCH=	yes
 PEP517_BUILD_CMD=	${PYTHON_CMD} -m flit_core.wheel
 PEP517_BUILD_DEPEND=	${PYTHON_PKGNAMEPREFIX}flit-core>=3.2<4:devel/py-flit-core@${PY_FLAVOR}
 
-.include <bsd.port.pre.mk>
-
-.if ${PYTHON_REL} < 31100
-RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}tomli>=1.1.0:textproc/py-tomli@${PY_FLAVOR}
-.endif
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
