--- a/devel/py-setuptools/Makefile
+++ b/devel/py-setuptools/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	setuptools
 PORTVERSION=	63.1.0
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -20,33 +20,16 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}wheel044<0.46.0:devel/py-wheel044@${PY_FLAVOR}
 
 USES=		cpe python
-USE_PYTHON=	allflavors autoplist concurrent distutils
+USE_PYTHON=	allflavors autoplist concurrent pep517 # pytest to return later
 
 CPE_VENDOR=	python
 
-MAKE_ENV+=	SETUPTOOLS_DISABLE_VERSIONED_EASY_INSTALL_SCRIPT=1
 NO_ARCH=	yes
-PYDISTUTILS_SETUP=	${PYSETUP}
-
-PLIST_FILES=	"@sample %%PYTHON_SITELIBDIR%%/easy-install.pth.dist %%PYTHON_SITELIBDIR%%/easy-install.pth"
 
 .include <bsd.port.pre.mk>
 
 .if ${PYTHON_REL} < 31000
 EXTRA_PATCHES+=	${PATCHDIR}/py39
 .endif
-
-.if ${FLAVOR} != ${FLAVORS:[1]}
-SUB_FILES+=	pkg-message
-SUB_LIST+=	PYTHON_VER=${PYTHON_VER}
-.endif
-
-NO_TEST= yes
-
-post-install:
-	${INSTALL_DATA} ${FILESDIR}/easy-install.pth.dist ${FAKE_DESTDIR}${PYTHON_SITELIBDIR}/
-
-#do-test:
-#	@cd ${WRKSRC} && ${PYTHON_CMD} ${PYDISTUTILS_SETUP} test
 
 .include <bsd.port.post.mk>
