--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2,6 +2,7 @@ COMMENT = Development utilities
 
 SUBDIR += 9base
 SUBDIR += R-cran-R6
+SUBDIR += R-cran-Rcpp
 SUBDIR += R-cran-S7
 SUBDIR += R-cran-bit
 SUBDIR += R-cran-bit64
@@ -10,16 +11,20 @@ SUBDIR += R-cran-brio
 SUBDIR += R-cran-callr
 SUBDIR += R-cran-cli
 SUBDIR += R-cran-covr
+SUBDIR += R-cran-cpp11
 SUBDIR += R-cran-crayon
 SUBDIR += R-cran-desc
 SUBDIR += R-cran-diffobj
 SUBDIR += R-cran-evaluate
 SUBDIR += R-cran-fansi
+SUBDIR += R-cran-foreach
 SUBDIR += R-cran-future
 SUBDIR += R-cran-globals
 SUBDIR += R-cran-glue
+SUBDIR += R-cran-iterators
 SUBDIR += R-cran-later
 SUBDIR += R-cran-lifecycle
+SUBDIR += R-cran-lintr
 SUBDIR += R-cran-lubridate
 SUBDIR += R-cran-magrittr
 SUBDIR += R-cran-memoise
@@ -39,7 +44,10 @@ SUBDIR += R-cran-sys
 SUBDIR += R-cran-testit
 SUBDIR += R-cran-testthat
 SUBDIR += R-cran-tibble
+SUBDIR += R-cran-tidyr
+SUBDIR += R-cran-tidyselect
 SUBDIR += R-cran-tinytest
+SUBDIR += R-cran-tzdb
 SUBDIR += R-cran-urlchecker
 SUBDIR += R-cran-uuid
 SUBDIR += R-cran-vctrs
