--- a/devel/Makefile
+++ b/devel/Makefile
@@ -33,6 +33,7 @@ SUBDIR += R-cran-mockery
 SUBDIR += R-cran-pillar
 SUBDIR += R-cran-pkgconfig
 SUBDIR += R-cran-pkgload
+SUBDIR += R-cran-plogr
 SUBDIR += R-cran-praise
 SUBDIR += R-cran-promises
 SUBDIR += R-cran-proto
