add several ports

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -85,6 +85,8 @@ SUBDIR += intltool
 SUBDIR += iso8879
 SUBDIR += itstool
 SUBDIR += jade
+SUBDIR += jdictionary
+SUBDIR += jdictionary-int-eng
 SUBDIR += jq
 SUBDIR += kf5-kcodecs
 SUBDIR += kf5-sonnet
