--- a/www/wordpress/Makefile
+++ b/www/wordpress/Makefile
@@ -1,31 +1,45 @@
 PORTNAME=	wordpress
 DISTVERSION=	6.7.2
+PORTREVISION?=	0
+.ifndef WORDPRESS_LANG
 PORTEPOCH=	1
-CATEGORIES=	www
 MASTER_SITES=	https://wordpress.org/
+.else
+DISTVERSIONSUFFIX=	-${WORDPRESS_LANG}
+MASTER_SITES?=	https://${WORDPRESS_LANG}.wordpress.org/
+.endif
+CATEGORIES+=	www
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	State-of-the-art semantic personal publishing platform
+WWW=		${MASTER_SITES}
 
 LICENSE=	gpl2+
 LICENSE_FILE=	${WRKSRC}/license.txt
 
-NO_ARCH=	yes
-NO_BUILD=	yes
-USES=		php:web cpe
-USE_PHP=	curl exif fileinfo ftp gd hash json mysqli pcre tokenizer xml zip zlib
-RUN_DEPENDS=	${LOCALBASE}/lib/php/${PHP_EXT_DIR}/imagick.so:graphics/pecl-imagick@${PHP_FLAVOR}
-WRKSRC=		${WRKDIR}/${PORTNAME}
+RUN_DEPENDS=	${PECL_PKGNAMEPREFIX}imagick>=2.2.2:graphics/pecl-imagick@${PHP_FLAVOR}
 
+USES=		cpe php:web
 .if ${DISTVERSION:N*.*.*}
 CPE_VERSION=	${DISTVERSION}.0
 .endif
 
+.ifdef WORDPRESS_LANG
+PKGNAMESUFFIX=	-${WORDPRESS_LANG}
+CPE_LANG=	${WORDPRESS_LANG}
+.endif
+
+USE_PHP=	curl exif fileinfo ftp gd mysqli tokenizer xml zip zlib
+CONFLICTS_INSTALL=	??-wordpress
+NO_ARCH=	yes
+NO_BUILD=	yes
 SUB_FILES=	pkg-message
+WRKSRC=		${WRKDIR}/${PORTNAME}
 PLIST=		${WRKDIR}/pkg-plist
 PORTDOCS=	readme.html
-
 OPTIONS_DEFINE=	DOCS
+
+.include <bsd.mport.options.mk>
 
 pre-everything::
 	@${ECHO_CMD} "If you want to upgrade, you must read upgrade document."
@@ -47,7 +61,9 @@ do-install:
 	${INSTALL} -d -m 755 ${STAGEDIR}${WWWDIR}/
 	${CP} -R ${WRKSRC}/ ${STAGEDIR}${WWWDIR}/
 	${FIND} ${STAGEDIR}${WWWDIR}/ -type d -exec ${CHMOD} g+w {} \;
-	${MKDIR} ${STAGEDIR}${DOCSDIR}/
-	cd ${WRKSRC}/ && ${INSTALL_DATA} ${PORTDOCS} ${STAGEDIR}${DOCSDIR}/
+
+do-install-DOCS-on:
+	${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}/
+	cd ${WRKSRC}/ && ${INSTALL_DATA} ${PORTDOCS} ${FAKE_DESTDIR}${DOCSDIR}/
 
 .include <bsd.port.mk>
