--- a/textproc/aspell/Makefile
+++ b/textproc/aspell/Makefile
@@ -1,7 +1,12 @@
 PORTNAME=	aspell
 PORTVERSION=	0.60.8.1
+PORTREVISION=	1
+PORTEPOCH=	1
 CATEGORIES=	textproc
 MASTER_SITES=	GNU/aspell
+
+PATCH_SITES=	https://github.com/GNUAspell/${PORTNAME}/commit/
+PATCHFILES+=	ee6cbb12ff36a1e6618d7388a78dd4e0a2b44041.patch:-p1
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Spelling checker with better suggestion logic than ispell
@@ -10,21 +15,20 @@ WWW=		http://aspell.net/
 LICENSE=	lgpl2.1
 
 USES=		cpe gmake iconv libtool ncurses perl5 shebangfix
-GNU_CONFIGURE=	yes
-GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
-CONFIGURE_ARGS=	--enable-dict-dir=${DATADIR}	\
-		--enable-docdir=${DOCSDIR}	\
-		--enable-curses="${NCURSESLIBS}" \
+
+CONFIGURE_ARGS=	--enable-curses="${NCURSESLIBS}" \
+		--enable-dict-dir=${DATADIR} \
+		--enable-docdir=${DOCSDIR} \
 		--enable-static
+GNU_CONFIGURE=	yes
+INSTALL_TARGET=	install-strip
 USE_LDCONFIG=	yes
 SHEBANG_FILES=	scripts/aspell-import
 CPE_VENDOR=	gnu
 
-INSTALL_TARGET=	install-strip
-VERINST=	${PORTVERSION:R:R}
 SUB_FILES=	aspell.ver
-PLIST_SUB=	VER=${VERINST}
-SUB_LIST=	VERINST=${VERINST}
+PLIST_SUB=	VER=${PORTVERSION:R:R}
+SUB_LIST=	VER=${PORTVERSION:R:R}
 INFO=		aspell aspell-dev
 
 OPTIONS_DEFINE=	NLS
