--- a/devel/argp-standalone/Makefile
+++ b/devel/argp-standalone/Makefile
@@ -1,10 +1,7 @@
-# Created by: Sergey Matveychuk <sem@ciam.ru>
-
 PORTNAME=	argp-standalone
-PORTVERSION=	1.3
+PORTVERSION=	1.5.0
+PORTREVISION=	1
 CATEGORIES=	devel
-MASTER_SITES=	http://www.lysator.liu.se/~nisse/misc/ \
-		FREEBSD_LOCAL/sem
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Standalone version of arguments parsing functions from GLIBC
@@ -12,17 +9,15 @@ COMMENT=	Standalone version of arguments parsing functions from GLIBC
 LICENSE=	lgpl publicdom
 LICENSE_COMB=	multi
 
-USES=		autoreconf libtool
+USES=		gettext-runtime localbase:ldflags meson
+
+MESON_ARGS=	--default-library=both
 USE_CSTD=	gnu89
-GNU_CONFIGURE=	yes
 USE_LDCONFIG=	yes
-INSTALL_TARGET=	install-strip
 
-PLIST_FILES=	lib/libargp.a \
-		lib/libargp.so lib/libargp.so.0 lib/libargp.so.0.0.0 \
-		include/argp.h
+PLIST_SUB=	PORTVERSION=${PORTVERSION}
 
-post-install:
-	${INSTALL_DATA} ${WRKSRC}/argp.h ${STAGEDIR}${PREFIX}/include
+USE_GITHUB=	yes
+GH_TAGNAME=	8ded2bc
 
 .include <bsd.port.mk>
