--- a/devel/Makefile
+++ b/devel/Makefile
@@ -40,6 +40,7 @@ SUBDIR += R-cran-praise
 SUBDIR += R-cran-promises
 SUBDIR += R-cran-proto
 SUBDIR += R-cran-purrr
+SUBDIR += R-cran-rJava
 SUBDIR += R-cran-registry
 SUBDIR += R-cran-rematch2
 SUBDIR += R-cran-reshape
@@ -252,6 +253,7 @@ SUBDIR += gnulibiberty
 SUBDIR += gnustep
 SUBDIR += gnustep-make
 SUBDIR += go-bindata
+SUBDIR += gob2
 SUBDIR += gobject-introspection
 SUBDIR += goffice
 SUBDIR += google-perftools
@@ -1681,6 +1683,7 @@ SUBDIR += rubygem-multi_json
 SUBDIR += rubygem-mustache
 SUBDIR += rubygem-mutex_m
 SUBDIR += rubygem-native-package-installer
+SUBDIR += rubygem-nori
 SUBDIR += rubygem-observer
 SUBDIR += rubygem-ostruct
 SUBDIR += rubygem-pkg-config
