--- a/devel/Makefile
+++ b/devel/Makefile
@@ -17,6 +17,7 @@ SUBDIR += R-cran-covr
 SUBDIR += R-cran-cpp11
 SUBDIR += R-cran-crayon
 SUBDIR += R-cran-data.table
+SUBDIR += R-cran-decor
 SUBDIR += R-cran-desc
 SUBDIR += R-cran-diffobj
 SUBDIR += R-cran-evaluate
