--- a/devel/Makefile
+++ b/devel/Makefile
@@ -31,6 +31,7 @@ SUBDIR += R-cran-iterators
 SUBDIR += R-cran-later
 SUBDIR += R-cran-lifecycle
 SUBDIR += R-cran-lintr
+SUBDIR += R-cran-listenv
 SUBDIR += R-cran-lubridate
 SUBDIR += R-cran-magrittr
 SUBDIR += R-cran-memoise
