--- a/devel/Makefile
+++ b/devel/Makefile
@@ -37,6 +37,7 @@ SUBDIR += R-cran-lubridate
 SUBDIR += R-cran-magrittr
 SUBDIR += R-cran-memoise
 SUBDIR += R-cran-mockery
+SUBDIR += R-cran-pak
 SUBDIR += R-cran-pillar
 SUBDIR += R-cran-pkgconfig
 SUBDIR += R-cran-pkgload
