--- a/devel/build2/Makefile
+++ b/devel/build2/Makefile
@@ -56,8 +56,8 @@ do-install:
 		config.bin.lib=shared \
 		config.import.libsqlite3= \
 		config.bin.rpath=${PREFIX}/lib \
-		config.install.chroot=${STAGEDIR} \
-		config.install.root=${PREFIX}
+		config.install.chroot=${FAKE_DESTDIR} \
+		config.install.root=${TRUE_PREFIX}
 	@cd ${WRKSRC} && ${SETENVI} ${WRK_ENV} ${MAKE_ENV} \
 		./build2/build2/b-boot install: build2/ bpkg/ bdep/ \
 		-V -j ${MAKE_JOBS_NUMBER} -J ${MAKE_JOBS_NUMBER}
