--- a/devel/p5-DateTime-Set/Makefile
+++ b/devel/p5-DateTime-Set/Makefile
@@ -25,7 +25,7 @@ USE_PERL5=	configure
 PORTDOCS=	Changes README TODO
 
 post-install-DOCS-on:
-	@${MKDIR} ${STAGEDIR}${DOCSDIR}
-	(cd ${WRKSRC} && ${INSTALL_DATA} ${PORTDOCS} ${STAGEDIR}${DOCSDIR})
+	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
+	(cd ${WRKSRC} && ${INSTALL_DATA} ${PORTDOCS} ${FAKE_DESTDIR}${DOCSDIR})
 
 .include <bsd.port.mk>
