add some kde stuff

--- a/net/Makefile
+++ b/net/Makefile
@@ -74,6 +74,8 @@ SUBDIR += isc-dhcp44-server
 SUBDIR += jrdesktop
 SUBDIR += kea
 SUBDIR += kcalutils
+SUBDIR += kdenetwork
+SUBDIR += kdenetwork-filesharing
 SUBDIR += kf5-kcalendarcore
 SUBDIR += kf5-kcontacts
 SUBDIR += kf5-kdav
@@ -85,6 +87,7 @@ SUBDIR += kf6-kcontacts
 SUBDIR += kf6-kdav
 SUBDIR += kf6-kholidays
 SUBDIR += kf6-syndication
+SUBDIR += kget
 SUBDIR += kidentitymanagement
 SUBDIR += kimap
 SUBDIR += kitinerary
@@ -94,6 +97,8 @@ SUBDIR += kmbox
 SUBDIR += kmime
 SUBDIR += kontactinterface
 SUBDIR += kpimtextedit
+SUBDIR += krdc
+SUBDIR += krfb
 SUBDIR += ksmtp
 SUBDIR += ktnef
 SUBDIR += mailcommon
