--- a/net-p2p/Makefile
+++ b/net-p2p/Makefile
@@ -3,12 +3,16 @@ COMMENT = peer-to-peer network applications
 SUBDIR += ctorrent
 SUBDIR += libktorrent
 SUBDIR += libtorrent
+SUBDIR += libtorrent-rasterbar
 SUBDIR += libutp
+SUBDIR += qbittorrent
 SUBDIR += rtorrent
 SUBDIR += shx
 SUBDIR += transmission
 SUBDIR += transmission-components
 SUBDIR += transmission-remote-gui
+SUBDIR += udpt
+SUBDIR += uhub
 SUBDIR += walletd
 SUBDIR += warpinator
 SUBDIR += xbt
